--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,39 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/windows,sass
+
+#Prepros App
+
+application/node_modules/*
+!application/node_modules/.gitkeep
+
+application/gems/gems/*
+!application/gems/gems/.gitkeep
+
+application/macgems/
+
+application/gems/specifications/*
+!application/gems/specifications/.gitkeep
+
+application/bin/ruby/*
+!application/bin/ruby/.gitkeep
+
+.idea
+ffmpegsumo.dll
+icudt.dll
+libEGL.dll
+libGLESv2.dll
+nw.pak
+Prepros.exe
+
+# Windows image file caches
+Thumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Mac crap
+.DS_Store
+
+#Misc
+*.log
